# SOEM-rs

./: .travis.yml  Cargo.toml  README.md
examples/: simple_test.rs  slave_info.rs
src/: error.rs  lib.rs
