[package]
name = "soem"
version = "0.2.0"
authors = ["Matwey V. Kornilov <matwey.kornilov@gmail.com>", "slowtec GmbH <post@slowtec.de>" ]
license = "GPL-2.0-only"
description = "SOEM in Rust"
documentation = "http://docs.rs/soem"
repository = "https://github.com/matwey/SOEM-rs"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "matwey/SOEM-rs", branch = "master" }

[dependencies]
boolinator = "^2.4"
SOEM-sys = "0.1.2"
num = "^0.2"
num-traits = "^0.2"
num-derive = "^0.2"

[dev-dependencies]
clap = "2"

[patch.crates-io]
SOEM-sys = { git = "https://github.com/slowtec/SOEM-sys" }
