[package]
name = "soem"
version = "0.1.0"
authors = ["Matwey V. Kornilov <matwey.kornilov@gmail.com>"]
license = "GPL-2.0-only"
description = "SOEM in Rust"
documentation = "http://docs.rs/soem"
repository = "https://github.com/matwey/SOEM-rs"
readme = "README.md"
edition = "2018"

[dependencies]
boolinator = "^2.4"
clap = "^2.32"
SOEM-sys = "0.2"
num = "^0.2"
num-traits = "^0.2"
num-derive = "^0.2"

[badges]
travis-ci = { repository = "matwey/SOEM-rs", branch = "master" }
